<resources>
    <string name="app_name">My Navigation Bottom</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah dengan data</string>
    <string name="move_with_object">Pindah dengan object</string>
    <string name="dial_number">Dial Number +6287778043255</string>
    <string name="move_with_result">Pindah activity result</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="reading">Membaca</string>
    <string name="writing">Menulis</string>
    <string name="choose">Pilih</string>
</resources>
